--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,2 +1,2 @@
 site_name: Test site for GitHub pages with MkDocs
-site_url: https://canIrenamethispart.github.io/ghpagetest
+site_url: https://evalieungh.github.io/ghpagetest/
