--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,2 +1,5 @@
 site_name: Test site for GitHub pages with MkDocs
 site_url: https://evalieungh.github.io/ghpagetest/
+nav:
+    - Home: index.md
+    - About: about.md
